add-simple-model

--- a/06-analytics-engineering/ds525/profile.yml
+++ b/06-analytics-engineering/ds525/profile.yml
@@ -3,7 +3,7 @@ ds525:
     dev:
       dbname: postgres
       host: localhost
-      pass: "postgres"
+      pass: postgres
       port: 5432
       schema: public
       threads: 1
